Fixed nav-mobile overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   min-width: 320px;
+  background-color: #fce2c0;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
 }
@@ -41,6 +42,12 @@ a {
   font-size: 20px;
 }
 
+.nav-bar a:focus,
+.nav-bar a:hover,
+.nav-bar a:active {
+  color: #E81123;
+}
+
 .nav-bar i {
   font-size: 32px;
 }
@@ -72,7 +79,8 @@ a {
   justify-content: space-around;
   width: 100%;
   height: 100vh;
-  background-color: red;
+  /* overflow: hidden; */
+  background-color: #fce2c0;
 }
 
 .nav-mobile .home {
@@ -134,23 +142,23 @@ a {
 }
 
 .who {
-  background-color: #0063B1;
+  background-color: #0078D7;
 }
 
 .what {
-  background-color: #0063B1;
+  background-color: #E81123;
 }
 
 .when {
-  background-color: #0063B1;
+  background-color: #FFB900;
 }
 
 .where {
-  background-color: #0063B1;
+  background-color: #10893E;
 }
 
 .why {
-  background-color: #0063B1;
+  background-color: #000000;
 }
 
 /* media queries */
@@ -188,6 +196,10 @@ a {
   display: flex;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 /* note */
 .font {
   font-family: 'Roboto', sans-serif;
@@ -209,4 +221,6 @@ a {
   color: #2ecc71;
   color: #000000;
   color: #f39c12;
+  /* body background-color */
+  background-color: #fad3a2;
 }
